# evm-run

./: Cargo.toml  README.md  cli.js  opcodes.js  package.json  parseCode.js  vm.js
examples/: addition.evm  block-number-efficient.evm  block-number.evm  create.evm  eth-balance.evm  my-msg.evm  prime-number.evm  sha256.evm  square-of-number.evm
src/: bytes_wrapper.rs  cli.rs  evm.rs  inspector.rs  main.rs  stack_fmt.rs
src/code/: assembler.rs  mod.rs
